Bug 1453761 - Adjust font sizes, spacing, and font weights on about:preferences#home r=Mardak
MozReview-Commit-ID: 1rDTo5X6986

UltraBlame original commit: eb8002dda30c2c2cdd60c3bb4d1e563e6393d98a

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -1217,6 +1217,16 @@ margin
 ;
 }
 #
+homepageAndNewWindowsOption
+{
+margin
+-
+top
+:
+20px
+;
+}
+#
 homepageGroup
 :
 -
